(email preferences): implement

--- a/ODK.Web.Razor/Views/Shared/Account/_EmailPreferencesForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_EmailPreferencesForm.cshtml
@@ -8,7 +8,7 @@
 
     var labelText = preference.Type switch
     {
-        MemberEmailPreferenceType.ChapterMessages => "Emails from the group",
+        MemberEmailPreferenceType.ChapterMessages => "Emails from the group organisers",
         MemberEmailPreferenceType.ConversationMessages => "Emails notifying you of replies to your conversation messages",
         MemberEmailPreferenceType.EventMessages => "Emails notifying you of replies to your event messages",
         MemberEmailPreferenceType.Events => "Emails informing you of new events",
