--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_SendMemberEmailForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_SendMemberEmailForm.cshtml
@@ -1,4 +1,5 @@
-﻿@model ODK.Web.Razor.Models.Admin.Members.SendMemberEmailFormViewModel
+﻿@using ODK.Web.Razor.Models.Admin.Members
+@model SendMemberEmailFormViewModel
 
 <div class="form-group mb-3 required">
     @Html.LabelFor(x => x.Subject, new { @class = "form-label" })
