(superadmin): alert on subscription create page if payments not set up

--- a/ODK.Web.Razor/Pages/SuperAdmin/Email.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/Email.cshtml
@@ -14,7 +14,7 @@
 {
     Breadcrumbs = new[]
     {
-        new MenuItem { Link = "/SuperAdmin/Emails", Text = "Emails" },
+        new MenuItem { Link = "/superadmin/emails", Text = "Emails" },
         new MenuItem { Text = Model.Email.Type.ToString() }
     }
 })
