--- a/ODK.Web.Razor/Pages/SuperAdmin/FeatureCreate.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/FeatureCreate.cshtml
@@ -13,7 +13,7 @@
 {
     Breadcrumbs = new []
     {
-        new MenuItem { Link = "/SuperAdmin/Features", Text = "Features" },
+        new MenuItem { Link = "/superadmin/features", Text = "Features" },
         new MenuItem { Text = "New" }
     }
 })
