--- a/ODK.Web.Razor/Pages/SuperAdmin/Subscriptions.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/Subscriptions.cshtml
@@ -2,7 +2,7 @@
 @attribute [Authorize]
 @using Microsoft.AspNetCore.Authorization
 @using ODK.Web.Razor.Models.Components
-@model ODK.Web.Razor.Pages.SuperAdmin.SubscriptionsModel
+@model SubscriptionsModel
 @{
     Layout = "_SiteAdminLayout";
     Model.Title = "Subscriptions | SuperAdmin";
