--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailContent.cshtml
@@ -24,6 +24,6 @@
     </button>
 </form>
 
-<form method="post" action="/SuperAdmin/Emails/@Model.Email.Type/Send/Test"
+<form method="post" action="/superadmin/emails/@Model.Email.Type/send/test"
       id="send-test-form">
 </form>
