--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailsTable.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailsTable.cshtml
@@ -18,7 +18,7 @@
             {
                 <tr>
                     <td>
-                        <a href="/SuperAdmin/Emails/@email.Type">
+                        <a href="/superadmin/emails/@email.Type">
                             @email.Type
                         </a>
                     </td>
