--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_SubscriptionsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_SubscriptionsContent.cshtml
@@ -7,71 +7,74 @@
 }
 
 <h2>Subscriptions</h2>
-<p>
-    <a class="btn btn-primary" href="/SuperAdmin/Subscriptions/Create">
-        Create
-    </a>
-</p>
-<div class="table-responsive">
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Enabled</th>            
-                <th>Group limit</th>
-                <th>Member limit</th>
-                <th>Features</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var subscription in subscriptions)
-            {
+
+<section class="section">
+    <p>
+        <a class="btn btn-primary" href="/superadmin/subscriptions/new">
+            Create
+        </a>
+    </p>
+    <div class="table-responsive">
+        <table class="table table-striped">
+            <thead>
                 <tr>
-                    <td>
-                        <a href="/SuperAdmin/Subscriptions/@subscription.Id">@subscription.Name</a>
-                    </td>
-                    <td>
-                        @if (subscription.Enabled)
-                        {
-                            <i class="fa-solid fa-circle-check text-success"></i>
-                        }
-                        else
-                        {
-                            <i class="fa-regular fa-circle-xmark text-danger"></i>
-                        }
-                    </td>                                
-                    <td>@subscription.GroupLimit</td>
-                    <td>@subscription.MemberLimit</td>
-                    <td>
-                        @if (subscription.Premium)
-                        {
-                            <i class="fa-solid fa-star text-warning" data-bs-toggle="tooltip" data-bs-title="Premium"></i>
-                        }
-                        @if (subscription.SendMemberEmails)
-                        {
-                            <i class="fas fa-envelope" data-bs-toggle="tooltip" data-bs-title="Send member emails"></i>
-                        }
-                        @if (subscription.MemberSubscriptions)
-                        {
-                            <i class="fa-solid fa-dollar-sign" data-bs-toggle="tooltip" data-bs-title="Member subscriptions"></i>
-                        }
-                    </td>    
-                    <td>
-                        @if (subscription.Default)
-                        {
-                            @:Default
-                        }
-                        else
-                        {
-                            <form action="/superadmin/subscriptions/@subscription.Id/default" method="post">
-                                @Html.AntiForgeryToken()
-                                <button class="btn btn-primary btn-sm">Set default</button>
-                            </form>
-                        }
-                    </td>
+                    <th>Name</th>
+                    <th>Enabled</th>
+                    <th>Group limit</th>
+                    <th>Member limit</th>
+                    <th>Features</th>
+                    <th></th>
                 </tr>
-            }
-        </tbody>
-    </table>
-</div>
+            </thead>
+            <tbody>
+                @foreach (var subscription in subscriptions)
+                {
+                    <tr>
+                        <td>
+                            <a href="/superadmin/subscriptions/@subscription.Id">@subscription.Name</a>
+                        </td>
+                        <td>
+                            @if (subscription.Enabled)
+                            {
+                                <i class="fa-solid fa-circle-check text-success"></i>
+                            }
+                            else
+                            {
+                                <i class="fa-regular fa-circle-xmark text-danger"></i>
+                            }
+                        </td>
+                        <td>@subscription.GroupLimit</td>
+                        <td>@subscription.MemberLimit</td>
+                        <td>
+                            @if (subscription.Premium)
+                            {
+                                <i class="fa-solid fa-star text-warning" data-bs-toggle="tooltip" data-bs-title="Premium"></i>
+                            }
+                            @if (subscription.SendMemberEmails)
+                            {
+                                <i class="fas fa-envelope" data-bs-toggle="tooltip" data-bs-title="Send member emails"></i>
+                            }
+                            @if (subscription.MemberSubscriptions)
+                            {
+                                <i class="fa-solid fa-dollar-sign" data-bs-toggle="tooltip" data-bs-title="Member subscriptions"></i>
+                            }
+                        </td>
+                        <td>
+                            @if (subscription.Default)
+                            {
+                                @:Default
+                            }
+                            else
+                            {
+                                <form action="/superadmin/subscriptions/@subscription.Id/default" method="post">
+                                    @Html.AntiForgeryToken()
+                                    <button class="btn btn-primary btn-sm">Set default</button>
+                                </form>
+                            }
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</section>
