--- a/ODK.Web.Razor/Pages/SuperAdmin/EmailProvider.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/EmailProvider.cshtml
@@ -13,7 +13,7 @@
 {
     Breadcrumbs = new []
     {
-        new MenuItem { Link = "/SuperAdmin/Emails", Text = "Emails" },
+        new MenuItem { Link = "/superadmin/emails", Text = "Emails" },
         new MenuItem { Text = Model.Provider?.SmtpServer ?? "SMTP" }
     }
 })
