--- a/ODK.Web.Razor/Pages/SuperAdmin/Error.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/Error.cshtml
@@ -14,7 +14,7 @@
 {
     Breadcrumbs = new []
     {
-        new MenuItem { Link = "/SuperAdmin/Errors", Text = "Error log" },
+        new MenuItem { Link = "/superadmin/errors", Text = "Error log" },
         new MenuItem { Text = "Error" }
     }
 })
