--- a/ODK.Web.Razor/Pages/SuperAdmin/Feature.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/Feature.cshtml
@@ -14,7 +14,7 @@
 {
     Breadcrumbs = new[]
     {
-        new MenuItem { Link = "/SuperAdmin/Features", Text = "Features" },
+        new MenuItem { Link = "/superadmin/features", Text = "Features" },
         new MenuItem { Text = Model.Feature.Name }
     }
 })
