--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailProviders.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailProviders.cshtml
@@ -7,7 +7,7 @@
 }
 
 <p>
-    <a class="btn btn-primary" href="/SuperAdmin/EmailProviders/Create">
+    <a class="btn btn-primary" href="/superadmin/emailproviders/create">
         Create
     </a>
 </p>
@@ -25,10 +25,10 @@
             {
                 <tr>
                     <td>
-                        <a href="/SuperAdmin/EmailProviders/@provider.Id">@provider.SmtpServer</a>
+                        <a href="/superadmin/emailproviders/@provider.Id">@provider.SmtpServer</a>
                     </td>
                     <td>
-                        <form method="post" action="/SuperAdmin/Emails/Providers/@provider.Id/Delete">
+                        <form method="post" action="/superadmin/emails/providers/@provider.Id/delete">
                             <button data-bs-toggle="tooltip" data-bs-title="Delete" class="btn-icon text-danger"
                                     onclick="return confirm('Are you sure you want to delete this email provider?');">
                                 <i class="fas fa-times"></i>
