--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_ErrorsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_ErrorsContent.cshtml
@@ -8,35 +8,38 @@
 }
 
 <h2>Error log</h2>
-<div class="table-responsive">
-    <table class="table table-striped">
-        <thead>
-        <tr>
-            <th>Time</th>
-            <th>Type</th>
-            <th>Message</th>
-            <th></th>
-        </tr>
-        </thead>
-        <tbody>
-        @foreach (var error in errors)
-        {
-            <tr>
-                <td>@error.CreatedUtc.ToString("yyyy-MM-dd HH:mm:ss")</td>
-                <td>@error.ExceptionType</td>
-                <td>
-                    <a href="/SuperAdmin/Errors/@error.Id">@error.ExceptionMessage</a>
-                </td>
-                <td>
-                    <form method="post" action="/SuperAdmin/Errors/@error.Id/Delete">
-                        @Html.AntiForgeryToken()
-                        <button data-bs-toggle="tooltip" data-bs-title="Delete" class="btn-icon text-danger">
-                            <i class="fas fa-times"></i>
-                        </button>
-                    </form>
-                </td>
-            </tr>
-        }
-        </tbody>
-    </table>
-</div>
+
+<section class="section">
+    <div class="table-responsive">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Time</th>
+                    <th>Type</th>
+                    <th>Message</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var error in errors)
+                {
+                    <tr>
+                        <td>@error.CreatedUtc.ToString("yyyy-MM-dd HH:mm:ss")</td>
+                        <td>@error.ExceptionType</td>
+                        <td>
+                            <a href="/superadmin/errors/@error.Id">@error.ExceptionMessage</a>
+                        </td>
+                        <td>
+                            <form method="post" action="/SuperAdmin/Errors/@error.Id/Delete">
+                                @Html.AntiForgeryToken()
+                                <button data-bs-toggle="tooltip" data-bs-title="Delete" class="btn-icon text-danger">
+                                    <i class="fas fa-times"></i>
+                                </button>
+                            </form>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</section>
