--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_PaymentsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_PaymentsContent.cshtml
@@ -9,13 +9,15 @@
 
 <h2>Payment settings</h2>
 
-<form method="post">
-    @Html.AntiForgeryToken()
-    @await Html.PartialAsync("SuperAdmin/_PaymentSettingsForm", new PaymentSettingsFormViewModel
-    {        
-        Provider = Model.Provider,
-        PublicKey = Model.ApiPublicKey,
-        SecretKey = Model.ApiSecretKey
-    })
-    <button class="btn btn-primary">Update</button>
-</form>
+<section class="section">
+    <form method="post">
+        @Html.AntiForgeryToken()
+        @await Html.PartialAsync("SuperAdmin/_PaymentSettingsForm", new PaymentSettingsFormViewModel
+        {        
+            Provider = Model.Provider,
+            PublicKey = Model.ApiPublicKey,
+            SecretKey = Model.ApiSecretKey
+        })
+        <button class="btn btn-primary">Update</button>
+    </form>
+</section>
