--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberEventsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberEventsContent.cshtml
@@ -55,7 +55,7 @@
                     {
                         Active = true,
                         ReadOnly = true,
-                        ResponseType = response.Response
+                        CurrentResponse = response.Response
                     })
                 </td>
             </tr>
