--- a/ODK.Web.Razor/Views/Shared/Events/_EventResponseIcon.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventResponseIcon.cshtml
@@ -1,6 +1,7 @@
-﻿@model ODK.Web.Razor.Models.Events.EventResponseIconViewModel
+﻿@using ODK.Web.Razor.Models.Events
+@model EventResponseIconViewModel
 
-@if (Model.ResponseType > 0)
+@if (Model.CurrentResponse > 0)
 {
     if (!Model.ReadOnly)
     {
@@ -10,7 +11,7 @@
 
     <button type="@(Model.ReadOnly ? "button" : "submit")"
             class="btn-icon                    
-                   event-response-option event-response-option--@Model.ResponseType.ToString()?.ToLowerInvariant() 
+                   event-response-option event-response-option--@Model.CurrentResponse.ToString()?.ToLowerInvariant() 
                    @((Model.Active || Model.ReadOnly) ? "active" : null)">
         <i class="fas icon--event-response @Model.IconClass @(Model.ReadOnly ? "icon--event-response--sm" : null)"
            data-bs-toggle="tooltip" data-bs-title="@Model.Tooltip">
