(chapter admin): control display of instagram feed

--- a/ODK.Web.Razor/Views/Shared/Components/_SocialMediaLinks.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_SocialMediaLinks.cshtml
@@ -10,7 +10,7 @@
 
     <div>        
         <a class="social-media-link" href="@url" target="_blank">
-            <i class="fa-brands fa-instagram @sizeClass"></i>
+            <i class="social-media-icon--instagram fa-brands fa-instagram @sizeClass"></i>
             @if (Model.ShowNames)
             {
                 <span>@Model.Instagram</span>
@@ -25,7 +25,7 @@
 
     <div>        
         <a class="social-media-link" href="@url" target="_blank">
-            <i class="fa-brands fa-facebook-f @sizeClass"></i>
+            <i class="social-media-icon--facebook fa-brands fa-facebook-f @sizeClass"></i>
             
             @if (Model.ShowNames)
             {
@@ -41,7 +41,7 @@
 
     <div>
         <a class="social-media-link" href="@url" target="_blank">
-            <i class="fa-brands fa-x-twitter @sizeClass"></i>
+            <i class="social-media-icon--twitter fa-brands fa-x-twitter @sizeClass"></i>
 
             @if (Model.ShowNames)
             {
