--- a/ODK.Web.Razor/wwwroot/css/_social-media.scss
+++ b/ODK.Web.Razor/wwwroot/css/_social-media.scss
@@ -18,6 +18,14 @@
     }
 }
 
+.social-media-icon--facebook {
+    color: var(--odk-social-media-facebook) !important;
+}
+
+.social-media-icon--instagram {
+    color: var(--odk-social-media-instagram) !important;
+}
+
 .social-media-link {
     display: flex;
     align-items: center;
@@ -25,7 +33,7 @@
 
     i {
         display: flex;
-        justify-content: center;        
+        justify-content: center;
         color: var(--bs-body-color);
 
         &:hover {
