--- a/ODK.Web.Razor/wwwroot/css/odk.css
+++ b/ODK.Web.Razor/wwwroot/css/odk.css
@@ -12606,6 +12606,14 @@ html[data-platform=odk] {
   opacity: 0.5;
 }
 
+.social-media-icon--facebook {
+  color: var(--odk-social-media-facebook) !important;
+}
+
+.social-media-icon--instagram {
+  color: var(--odk-social-media-instagram) !important;
+}
+
 .social-media-link {
   display: flex;
   align-items: center;
