--- a/ODK.Web.Razor/Views/Shared/Account/_DeleteAccountContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_DeleteAccountContent.cshtml
@@ -26,7 +26,7 @@ else
         If you delete your account we will delete all of your data, including any subscriptions you currently have.
     </p>
 
-    <form method="post" action="/Account/Delete">
+    <form method="post" action="/account/delete">
         <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete your account?');">
             Delete my account
         </button>
