--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberAdminTabs.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberAdminTabs.cshtml
@@ -1,14 +1,15 @@
 ﻿@using ODK.Core.Platforms
+@using ODK.Services.Members.ViewModels
 @using ODK.Web.Common.Components
 @using ODK.Web.Common.Routes
-@using ODK.Web.Razor.Models.Admin.Members
-@model MemberAdminTabsViewModel
+@model MemberAdminPageViewModelBase
 @{
     var menuItems = new List<MenuItem>
     {
         new MenuItem { Link = OdkRoutes.MemberGroups.Member(Model.Platform, Model.Chapter, Model.Member.Id), Text = "Subscription" },
         new MenuItem { Link = OdkRoutes.MemberGroups.MemberEvents(Model.Platform, Model.Chapter, Model.Member.Id), Text = "Events" },
-        new MenuItem { Link = OdkRoutes.MemberGroups.MemberConversations(Model.Platform, Model.Chapter, Model.Member.Id), Text = "Conversations" }
+        new MenuItem { Link = OdkRoutes.MemberGroups.MemberConversations(Model.Platform, Model.Chapter, Model.Member.Id), Text = "Conversations" },
+        new MenuItem { Link = OdkRoutes.MemberGroups.MemberDelete(Model.Platform, Model.Chapter, Model.Member.Id), Text = "Delete" }
     };
 
     if (Model.Platform == PlatformType.DrunkenKnitwits)
