--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberContent.cshtml
@@ -3,17 +3,13 @@
 @using ODK.Services.Members
 @using ODK.Services.Members.ViewModels
 @using ODK.Web.Common.Extensions
+@using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Admin.Members
 @model MemberAdminPageViewModel
 
 @await Html.PartialAsync("Admin/Members/_MemberBreadcrumbs", Model)
 
-@await Html.PartialAsync("Admin/Members/_MemberAdminTabs", new MemberAdminTabsViewModel
-{
-    Chapter = Model.Chapter,
-    Member = Model.Member,
-    Platform = Model.Platform
-})
+@await Html.PartialAsync("Admin/Members/_MemberAdminTabs", Model)
 
 <form method="post">
     @Html.AntiForgeryToken()
@@ -24,14 +20,8 @@
     })
     <div class="d-flex">
         <button type="submit" class="btn btn-primary me-auto">Update</button>
-        <button type="button" class="btn btn-danger"
-                data-submit="#member-delete-form"
-                data-submit-confirm="Are you sure you want to delete this member?">
+        <a class="btn btn-danger" href="@OdkRoutes.MemberGroups.MemberDelete(Model.Platform, Model.Chapter, Model.Member.Id)">
             Delete
-        </button>
+        </a>
     </div>
-</form>
-
-<form method="post" action="/groups/@Model.Chapter.Id/members/@Model.Member.Id/delete"
-      id="member-delete-form">
 </form>
