--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberEventsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberEventsContent.cshtml
@@ -13,12 +13,7 @@
 
 @await Html.PartialAsync("Admin/Members/_MemberBreadcrumbs", Model)
 
-@await Html.PartialAsync("Admin/Members/_MemberAdminTabs", new MemberAdminTabsViewModel
-{
-    Chapter = Model.Chapter,
-    Member = Model.Member,
-    Platform = Model.Platform
-})
+@await Html.PartialAsync("Admin/Members/_MemberAdminTabs", Model)
 
 <p>
     Events are included below if this member was either invited by email, or has responded via the website.
