--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_FeaturesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_FeaturesContent.cshtml
@@ -36,7 +36,7 @@
                     </td>
                     <td>@feature.CreatedUtc.ToString("yyyy-MM-dd")</td>
                     <td>
-                        <form action="/SuperAdmin/Features/@feature.Id/Delete" method="post">
+                        <form action="/superadmin/features/@feature.Id/delete" method="post">
                             @Html.AntiForgeryToken()
                             <button class="btn-icon text-danger" onclick="return confirm('Are you sure you want to delete this feature?');">
                                     <i class="fas fa-times"></i>
