--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_SettingsForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_SettingsForm.cshtml
@@ -7,7 +7,7 @@
         .ToArray();
 }
 
-<div class="mb-3 form-check">
+<div class="mb-3 form-check form-switch">
     @Html.CheckBoxFor(x => x.DisableComments, new { @class = "form-check-input" })
     @Html.LabelFor(x => x.DisableComments, new { @class = "form-check-label" })
 </div>
